# ut-ATL24-coastnet

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  check.sh  check_coastnet_bathy.sh  check_coastnet_surface.sh  classify.sh  classify_bathy.sh  classify_coastnet.sh  classify_coastnet_bathy.sh  classify_coastnet_surface.sh  classify_surface.sh  cross_validate_bathy.sh  cross_validate_surface.sh  get_bathy_scores.sh  get_checked_bathy_scores.sh  get_checked_surface_scores.sh  get_coastnet_bathy_scores.sh  get_coastnet_surface_scores.sh  micro_scores_all.csv  micro_scores_all.txt  micro_scores_all_xval_0.csv  micro_scores_all_xval_0.txt  micro_scores_all_xval_1.csv  micro_scores_all_xval_1.txt  micro_scores_all_xval_2.csv  micro_scores_all_xval_2.txt  micro_scores_all_xval_3.csv  micro_scores_all_xval_3.txt  micro_scores_all_xval_4.csv  micro_scores_all_xval_4.txt  micro_scores_no_surface.csv  micro_scores_no_surface.txt  micro_scores_no_surface_xval_0.csv  micro_scores_no_surface_xval_0.txt  micro_scores_no_surface_xval_1.csv  micro_scores_no_surface_xval_1.txt  (+16 more)
ATL24_coastnet/: blunder_detection.h  cmd_utils.h  coastnet.h  confusion.h  container_utils.h  custom_dataset.h  dataframe.h  geotiff.h  pgm.h  precompiled.h  raster.h  sampler.h  utils.h  xgboost.h
ATL24_resnet/: cmd_utils.h  confusion.h  custom_dataset.h  pgm.h  precompiled.h  sampler.h  utils.h
apps/: blunder_detection.cpp  blunder_detection_cmd.h  classifier.cpp  classify.cpp  classify_cmd.h  classify_coastnet.cpp  classify_coastnet_cmd.h  classify_coastnet_surface.cpp  classify_coastnet_surface_cmd.h  classify_inc.h  coastnet.h  combine_predictions.cpp  combine_predictions_cmd.h  features.h  latlong_to_atm.cpp  network.h  resnet.h  resnet_classifier.cpp  resnet_train.cpp  resnet_train_cmd.h  sampling.h  score.cpp  score_cmd.h  score_coastnet.cpp  score_coastnet_cmd.h  train.cpp  train_cmd.h  train_coastnet.cpp  train_coastnet_cmd.h  train_coastnet_surface.cpp  train_coastnet_surface_cmd.h  view_classifications.py
assets/: us_nga_egm2008_1.tif
models/: coastnet-bathy.pt  coastnet-surface.pt
plugin/: CMakeLists.txt  CoastnetClassifier.cpp  CoastnetClassifier.h  Makefile  coastnet.cpp
results/: manual-bathy_fold0_results.txt  manual-bathy_fold0_summary.txt  manual-bathy_fold1_results.txt  manual-bathy_fold1_summary.txt  manual-bathy_fold2_results.txt  manual-bathy_fold2_summary.txt  manual-bathy_fold3_results.txt  manual-bathy_fold3_summary.txt  manual-bathy_fold4_results.txt  manual-bathy_fold4_summary.txt  manual-surface_fold0_results.txt  manual-surface_fold0_summary.txt  manual-surface_fold1_results.txt  manual-surface_fold1_summary.txt  manual-surface_fold2_results.txt  manual-surface_fold2_summary.txt  manual-surface_fold3_results.txt  manual-surface_fold3_summary.txt  manual-surface_fold4_results.txt  manual-surface_fold4_summary.txt  mixed-bathy_summary.txt  mixed-surface_summary.txt  synthetic-bathy_fold0_results.txt  synthetic-bathy_fold0_summary.txt  synthetic-bathy_fold1_results.txt  synthetic-bathy_fold1_summary.txt  synthetic-bathy_fold2_results.txt  synthetic-bathy_fold2_summary.txt  synthetic-bathy_fold3_results.txt  synthetic-bathy_fold3_summary.txt  synthetic-bathy_fold4_results.txt  synthetic-bathy_fold4_summary.txt  synthetic-surface_fold0_results.txt  synthetic-surface_fold0_summary.txt  synthetic-surface_fold1_results.txt  synthetic-surface_fold1_summary.txt  synthetic-surface_fold2_results.txt  synthetic-surface_fold2_summary.txt  synthetic-surface_fold3_results.txt  synthetic-surface_fold3_summary.txt  (+2 more)
scripts/: check.sh  classify.sh  classify_bathy.sh  classify_surface.sh  combine.sh  compute_scores.sh  create_fold_summary_table.py  create_fold_summary_tables.py  create_mixed_plots.sh  create_mixed_results_dataframe.sh  create_plots.sh  create_xval_results_dataframe.sh  cross_validate_bathy.sh  cross_validate_surface.sh  get_copy_commands.py  get_scores.sh  plot_fold_summaries.py  plot_mixed_predictions.py  preprocess.py  preprocess.sh  run_cmake.sh  train_bathy.sh  train_surface.sh
tests/: test_blunder_detection.cpp  test_classify.cpp  test_dataframe.cpp  test_gpu.cpp  test_pgm.cpp
